Implementa sincronização com TOTVS Educacional
✨ Funcionalidades:
- Serviço de integração com API TOTVS (totvs.service.js)
- Sincronização completa de alunos
- Sincronização incremental (apenas alterações)
- Mapeamento automático de dados TOTVS → Banco local
- Controller e rotas REST para sincronização
- Verificação de conexão com TOTVS
- Logs detalhados do processo

🔧 Componentes criados:
- src/services/totvs.service.js - Cliente API TOTVS
- src/services/sincronizacao.service.js - Lógica de sincronização
- src/controllers/sincronizacao.controller.js - Endpoints REST
- src/routes/sincronizacao.routes.js - Rotas API
- docs/SINCRONIZACAO_TOTVS.md - Documentação completa

⚙️ Configuração:
- Variáveis de ambiente para credenciais TOTVS
- Autenticação automática com renovação de token
- Transações para garantir integridade dos dados

📋 Processo:
1. Autentica no TOTVS
2. Busca alunos (com filtros opcionais)
3. Mapeia dados para formato local
4. Cria/atualiza pessoas e alunos
5. Vincula com turmas existentes
6. Retorna estatísticas (inseridos/atualizados/erros)

🔐 Segurança:
- Apenas administradores podem sincronizar
- Credenciais em variáveis de ambiente
- Validação de dados com express-validator

📦 Dependência:
- axios: Cliente HTTP para consumir API TOTVS

Requer adaptação dos endpoints e mapeamento conforme API TOTVS específica

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,17 @@ JWT_REFRESH_EXPIRES_IN=7d
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=100
 
+# ===================================
+# INTEGRAÇÃO TOTVS EDUCACIONAL
+# ===================================
+TOTVS_API_URL=https://api.totvs.com.br/educacional
+TOTVS_USERNAME=seu_usuario_totvs
+TOTVS_PASSWORD=sua_senha_totvs
+# Sincronização automática (true/false)
+TOTVS_AUTO_SYNC=false
+# Intervalo de sincronização em horas
+TOTVS_SYNC_INTERVAL=24
+
 # CORS - Origens permitidas (separadas por vírgula)
 CORS_ORIGINS=http://localhost:3000,http://localhost:4200
 
